[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-history-recover"
version = "0.1.0"
description = "恢复 Codex 本地历史会话显示的小工具"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []
authors = [
  {name = "messiwu"},
]
keywords = ["codex", "cli", "history", "resume", "sqlite"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.scripts]
codex-history-recover = "codex_history_recover.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
